package model.fractal;

import java.io.Serializable;

/**
 * Enum representing the different types of fractals that can be computed.
 */
public enum Fractal implements Serializable {
    MANDELBROT,JULIA,BURNING_SHIP
}
